12 August 2005 Andreas Fabri & Sylvain Pion
- Lazy_kernel : Protect_FPU optimizations, fix empty Objects.

12 August 2005 Andreas Fabri
- Bug fix in Lazy_exact_nt.h: replaced access to former data member 'in' 
  with call to member function 'approx()'

12 August 2005 Sylvain Pion
- Move Same_certainty to Kernel_23/include/CGAL/Kernel/.

11 August 2005 Andreas Fabri
- Added a common base class for lazy numbers and lazy kernel classes
- Added an example for the lazy kernel
  and a kernel with a functor that writes result to an output iterator

9 August 2005 Sylvain Pion
- Uncertain : replace operator&& and || overloads by operator& and |,
  to keep the lazy evaluation.

9 August 2005 Sylvain Pion
- Fix workaround for enum_cast.

7 August 2005 Sylvain Pion
- Uncertain, enum_cast : workaround for CGAL_CFG_MATCHING_BUG_5.

6 August 2005 Sylvain Pion
- Uncertain : add overload for enum_cast.
- Interval_nt : add specializations for Equal_to, Greater.. returning Uncertain.
- Uncertain : add opposite(), Same_uncertainty, Same_uncertainty_nt
  ( tools to propagete uncertainty )

5 August 2005 Sylvain Pion
- Specialize functors Sgn, Compare, Is_zero... for Interval_nt so that they
  return Uncertain<> (and their result_type is also updated).

3 August 2005 Sylvain Pion
- Interval_nt : remove operator&& and operator||.  Add value_type == double.
- Interval_arithmetic.h renamed to Interval_nt.h to follow CGAL's convetions.
- [doc] Interval_nt : update !

2 August 2005 Sylvain Pion
- Interval_nt : Add overloads for is_zero, is_one, is_positive, is_negative.
- New file Interval_nt_fwd.h to gather forward declarations to be sourced by
  CGAL/number_type_basic.h.
- Lazy_exact_nt : Fix for some mixed operators.
- Forward declarations in Lazy_exact_nt_fwd.h .
- Forward declarations in Filtered_exact_fwd.h .
- Add make_uncertain(Ucertain<T>).

2 August 2005 Sylvain Pion
- Uncertain : add maker function make_uncertain().

2 August 2005 Sylvain Pion